--- a/index.html
+++ b/index.html
@@ -41,17 +41,41 @@
             </div>
         </header>
         <!-- Services-->
+        <br><br><br>
+        <div class="row text-center">
+              <div class="col-md-4">
+                  <span class="fa-stack fa-4x">
+                    <div class="image-container">
+                      <img class="img-fluid" src="assets/img/interest/flutter.jpg" alt=""/>
+                    </div>
+
+                      </span>
+              </div>
+                <div class="col-md-8">
+              <h2 class="text-left">Contact me</h2>
+              <h5 class="text-left">Email.</h5>
+              <h5 class="text-left"><font color=#438bff>gyeongseok.kang@gmail.com</font></h5>
+              <h5 class="text-left">Phone.</h5>
+              <h5 class="text-left"><font color=#438bff>010-6626-1491</font></h5>
+              <h5 class="text-left">Chanel.</h5>
+              <h5 class="text-left"><a href="https://all-dev-kang.tistory.com/" target="_blank">https://all-dev-kang.tistory.com</a> </h5>
+              <h5 class="text-left"><a href="https://github.com/gyeongseokKang" target="_blank">https://github.com/gyeongseokKang</a> </h5>
+              </div>
+          </div>
         <section class="page-section" id="Interduce">
+
             <div class="container">
                 <div class="text-left">
                     <h2 class="section-heading text-uppercase">Interduce</h2>
                     <h3 class="section-subheading text-muted"><b>2년 차 개발자로 오픈소스 프로젝트를 이용한 기능을 기획, 개발하고 있습니다.
                       <br>학부생시절 창업한 회사의 CTO로 근무하며 seies-A 투자를 유치하고 팀이 성장할 때까지 필요한 기술을 책임졌던 경험이 있습니다.
-                    <br><br> 새로운 기능 개발, 오픈소스를 이용한 새로운 서비스를 만들어가는 것을 좋아합니다. 이를 위해서 지금 하고 있는 업무에 집중하는 동시에
+                    <br><br>새로운 기능 개발, 오픈소스를 이용한 새로운 서비스를 만들어가는 것을 좋아합니다. 이를 위해서 지금 하고 있는 업무에 집중하는 동시에
                   블로그, 영상, 책을 통해 최신 기술을 습득하고 현재 업무에 활용하기 위해 끊임없이 고민하고 공부합니다.
-                    <br><br> 지식과 코드는 나눌수록 좋아진다고 믿는 개발자입니다. 사내 스터디를 좋아하고 블로그에 공부한 내용을 정리하며, 협업이 가능한 코드를
+                    <br><br>지식과 코드는 나눌수록 좋아진다고 믿는 개발자입니다. 사내 스터디를 좋아하고 블로그에 공부한 내용을 정리하며, 협업이 가능한 코드를
                   짜기 위해 노력하고 공유합니다.</h3>
+
                 </div>
+
                 <!--
                 <div class="row text-center">
                     <div class="col-md-4">
@@ -93,8 +117,200 @@
               -->
             </div>
         </section>
+
+        <!-- Career-->
+        <section class="page-section bg-light" id="Career">
+            <div class="container">
+                  <h2 class="section-heading text-uppercase">Career</h2>
+                  <br>
+                <div class="text-center">
+                  <div class="row text-center">
+                        <div class="col-md-4">
+                            <span class="fa-stack fa-4x">
+                              <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/career/military.png" alt="" /></div>
+                                </span>
+                        </div>
+                          <div class="col-md-8">
+                              <p class="text-left">국방부 네트워크 운용병</p>
+                              <h3 class="section-subheading text-muted text-left"><b>2015.12-2017.09
+                                <br>▶ 네트워크 장비 설치 및 점검
+                                <br>▶ 네트워크 관제 프로그램 구현
+                                <br>▶ 국방부 주최 공개SW 역량강화교육이수
+                                <br>
+                                <a class="btn" href="assets/pdf/military_career.pdf" download>이수증.pdf</a>
+                              </h3>
+                          </div>
+                    </div>
+
+                    <br> <br>
+                    <div class="row text-center">
+                          <div class="col-md-4">
+                              <span class="fa-stack fa-4x">
+                                    <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/career/university.jpg" alt="" /></div>
+                              </span>
+                          </div>
+                            <div class="col-md-8">
+                                <p class="text-left">UC-lab</p>
+                                <h3 class="section-subheading text-muted text-left">
+                                  <b>2018.01-2020.02
+                                  <br>▶ 학부연구생
+                                  <br>▶ 연구실 프로젝트 다수 참여(AI CCTV, Egde Computing 등)
+                                  <br>▶ 한국통신학회 추계학술발표회 우수논문
+                                  <br>
+                                  <a class="btn" href="assets/pdf/best_award_page.pdf" download>Anomaly Detection...pdf</a>
+
+                                </h3>
+                            </div>
+                      </div>
+
+                      <br> <br>
+                      <div class="row text-center">
+                            <div class="col-md-4">
+                                <span class="fa-stack fa-4x">
+                                      <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/career/seculayer.jpg" alt="" /></div>
+                                </span>
+                            </div>
+                              <div class="col-md-8">
+                                  <p class="text-left">보안솔루션기업,<a href="http://www.seculayer.co.kr/ko/" target="_blank"> Seculayer </a> </p>
+                                  <h3 class="section-subheading text-muted text-left">
+                                    <b>2018.07.02-08.31
+                                    <br>▶ 인턴 근무
+                                    <br>▶ AI를 이용한 네트워크 침입탐지기법 리서치
+                                    <br>▶ AI 기반의 침입탐지 온톨로지 구축
+                                  </h3>
+                              </div>
+                        </div>
+
+                        <br> <br>
+                        <div class="row text-center">
+                              <div class="col-md-4">
+                                  <span class="fa-stack fa-4x">
+                                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/career/carchap.jpg" alt="" /></div>
+                                  </span>
+                              </div>
+                                <div class="col-md-8">
+                                    <p class="text-left">모빌리티플랫폼,<a href="https://www.carchapapp.com/" target="_blank"> Carchap </a></p>
+                                    <h3 class="section-subheading text-muted text-left">
+                                      <b>2018.12-2020.02
+                                      <br>▶ Android App 개발
+                                      <br>▶ REST API Server 개발
+                                      <br>▶ 스타트업 어워즈 대상 외 다수
+
+                                    </h3>
+                                </div>
+                          </div>
+
+                          <br> <br>
+                          <div class="row text-center">
+                                <div class="col-md-4">
+                                    <span class="fa-stack fa-4x">
+                                            <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/career/tmax.jpg" alt="" /></div>
+                                    </span>
+                                </div>
+                                  <div class="col-md-8">
+                                      <p class="text-left">IT기업,<a href="https://www.tmaxsoft.com/" target="_blank"> Tmaxsoft </a></p>
+                                      <h3 class="section-subheading text-muted text-left">
+                                        <b>2020.02-현재
+                                        <br>▶ Research Engineer(연구원)
+                                        <br>▶ 데이터분석툴 시각화 설계, 구현
+                                        <br>▶ 데이터 분석 방법 설계, 구현
+
+                                      </h3>
+                                  </div>
+                            </div>
+
+                </div>
+                <!--
+                <ul class="timeline">
+                    <li>
+                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/career/military.png" alt="" /></div>
+                        <div class="timeline-panel">
+                          <div class="timeline-heading">
+                              <h4 class="subheading">UC-lab</h4>
+                              <div class="timeline-body">
+                                <p class="text-muted">2015.12-2017.09</p>
+                                <p class="text-muted">*네트워크 장비 설치 및 점검</p>
+                                <p class="text-muted">*네트워크 관제 프로그램 구현 </p>
+                                <p class="text-muted">*국방부 주최 공개SW 역량강화교육이수 </p>
+                                <a class="btn" href="assets/pdf/military_career.pdf" download>이수증.pdf</a>
+                                </div>
+                          </div>
+                        </div>
+                    </li>
+                    <li class="timeline-inverted">
+                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/career/university.jpg" alt="" /></div>
+                        <div class="timeline-panel">
+                          <div class="timeline-heading">
+                              <h4 class="subheading">중앙대 UC-lab</h4>
+                          </div>
+                          <div class="timeline-body">
+                            <p class="text-muted">2018.01-2020.02</p>
+                            <p class="text-muted">학부연구생</p>
+                            <p class="text-muted">*한국통신학회 추계학술발표회 우수논문</p>
+                            <a class="btn" href="assets/pdf/best_award_page.pdf" download>Anomaly Detection...pdf</a>
+                            <p class="text-muted">*연구실 프로젝트 참여(AI CCTV, Egde Computing 등)</p>
+                            <p class="text-muted">*학회 소논문 (4회)</p>
+                            </div>
+                            <div class="timeline-body"><p class="text-muted"></p></div>
+                        </div>
+                    </li>
+
+                    <li class="timeline">
+                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/career/seculayer.jpg" alt="" /></div>
+                        <div class="timeline-panel">
+                          <div class="timeline-heading">
+                              <h4 class="subheading">보안솔루션기업,<a href="http://www.seculayer.co.kr/ko/" target="_blank"> Seculayer </a> </h4>
+                          </div>
+                          <div class="timeline-body">
+                            <p class="text-muted">2018.07.02-08.31</p>
+                            <p class="text-muted">인턴 근무</p>
+                            <p class="text-muted">*AI를 이용한 네트워크 침입탐지기법 리서치</p>
+                            <p class="text-muted">*AI 기반의 침입탐지 온톨로지 구축</p>
+
+                            </div>
+                            <div class="timeline-body"><p class="text-muted"></p></div>
+                        </div>
+                    </li>
+                    <li class="timeline-inverted">
+                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/career/carchap.jpg" alt="" /></div>
+                        <div class="timeline-panel">
+                            <div class="timeline-heading">
+                                <h4 class="subheading">모빌리티플랫폼,<a href="https://www.carchapapp.com/" target="_blank"> Carchap </a> </h4>
+                                <div class="timeline-body">
+                                  <p class="text-muted">2018.12~</p>
+                                  <p class="text-muted">*Android App 개발</p>
+                                  <p class="text-muted">*REST API Server 개발 </p>
+                                  <p class="text-muted">*스타트업 어워즈 대상 외 다수 </p>
+                                  </div>
+                            </div>
+                            <div class="timeline-body"><p class="text-muted"></p></div>
+                        </div>
+                    </li>
+                    <li class="timeline">
+                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/career/tmax.jpg" alt="" /></div>
+                        <div class="timeline-panel">
+                            <div class="timeline-heading">
+                                  <h4 class="subheading">SW기업,<a href="https://www.tmaxsoft.com/" target="_blank"> Tmaxsoft </a> </h4>
+                            </div>
+                            <div class="timeline-body">
+                              <p class="text-muted">2020.02~</p>
+                              <p class="text-muted">Research Engineer(연구원)</p>
+                              <p class="text-muted">*데이터분석툴 시각화 설계, 구현</p>
+                              <p class="text-muted">*데이터 분석 방법 설계, 구현</p>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="timeline-inverted">
+                        <div class="timeline-image">
+                            <h4>Be Part<br />Of My<br />Story!</h4>
+                        </div>
+                    </li>
+                </ul>
+              -->
+            </div>
+        </section>
         <!-- Portfolio Grid-->
-        <section class="page-section bg-light" id="Project">
+        <section class="page-section" id="Project">
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">Project</h2>
@@ -186,101 +402,6 @@
                         </div>
                     </div>
                 </div>
-            </div>
-        </section>
-        <!-- Career-->
-        <section class="page-section" id="Career">
-            <div class="container">
-                <div class="text-center">
-                    <h2 class="section-heading text-uppercase">Career</h2>
-                    <h3 class="section-heading text-uppercase">2014.03 중앙대학교 입학</h3>
-                    <h3 class="section-heading text-uppercase"> | </h3>
-                </div>
-                <ul class="timeline">
-                    <li>
-                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/career/military.png" alt="" /></div>
-                        <div class="timeline-panel">
-                          <div class="timeline-heading">
-                              <h4 class="subheading">국방부 네트워크운용병</h4>
-                              <div class="timeline-body">
-                                <p class="text-muted">2015.12-2017.09</p>
-                                <p class="text-muted">*네트워크 장비 설치 및 점검</p>
-                                <p class="text-muted">*네트워크 관제 프로그램 구현 </p>
-                                <p class="text-muted">*국방부 주최 공개SW 역량강화교육이수 </p>
-                                <a class="btn" href="assets/pdf/military_career.pdf" download>이수증.pdf</a>
-                                </div>
-                          </div>
-                        </div>
-                    </li>
-                    <li class="timeline-inverted">
-                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/career/university.jpg" alt="" /></div>
-                        <div class="timeline-panel">
-                          <div class="timeline-heading">
-                              <h4 class="subheading">중앙대 UC-lab</h4>
-                          </div>
-                          <div class="timeline-body">
-                            <p class="text-muted">2018.01-2020.02</p>
-                            <p class="text-muted">학부연구생</p>
-                            <p class="text-muted">*한국통신학회 추계학술발표회 우수논문</p>
-                            <a class="btn" href="assets/pdf/best_award_page.pdf" download>Anomaly Detection...pdf</a>
-                            <p class="text-muted">*연구실 프로젝트 참여(AI CCTV, Egde Computing 등)</p>
-                            <p class="text-muted">*학회 소논문 (4회)</p>
-                            </div>
-                            <div class="timeline-body"><p class="text-muted"></p></div>
-                        </div>
-                    </li>
-
-                    <li class="timeline">
-                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/career/seculayer.jpg" alt="" /></div>
-                        <div class="timeline-panel">
-                          <div class="timeline-heading">
-                              <h4 class="subheading">보안솔루션기업,<a href="http://www.seculayer.co.kr/ko/" target="_blank"> Seculayer </a> </h4>
-                          </div>
-                          <div class="timeline-body">
-                            <p class="text-muted">2018.07.02-08.31</p>
-                            <p class="text-muted">인턴 근무</p>
-                            <p class="text-muted">*AI를 이용한 네트워크 침입탐지기법 리서치</p>
-                            <p class="text-muted">*AI 기반의 침입탐지 온톨로지 구축</p>
-
-                            </div>
-                            <div class="timeline-body"><p class="text-muted"></p></div>
-                        </div>
-                    </li>
-                    <li class="timeline-inverted">
-                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/career/carchap.jpg" alt="" /></div>
-                        <div class="timeline-panel">
-                            <div class="timeline-heading">
-                                <h4 class="subheading">모빌리티플랫폼,<a href="https://www.carchapapp.com/" target="_blank"> Carchap </a> </h4>
-                                <div class="timeline-body">
-                                  <p class="text-muted">2018.12~</p>
-                                  <p class="text-muted">*Android App 개발</p>
-                                  <p class="text-muted">*REST API Server 개발 </p>
-                                  <p class="text-muted">*스타트업 어워즈 대상 외 다수 </p>
-                                  </div>
-                            </div>
-                            <div class="timeline-body"><p class="text-muted"></p></div>
-                        </div>
-                    </li>
-                    <li class="timeline">
-                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/career/tmax.jpg" alt="" /></div>
-                        <div class="timeline-panel">
-                            <div class="timeline-heading">
-                                  <h4 class="subheading">SW기업,<a href="https://www.tmaxsoft.com/" target="_blank"> Tmaxsoft </a> </h4>
-                            </div>
-                            <div class="timeline-body">
-                              <p class="text-muted">2020.02~</p>
-                              <p class="text-muted">Research Engineer(연구원)</p>
-                              <p class="text-muted">*데이터분석툴 시각화 설계, 구현</p>
-                              <p class="text-muted">*데이터 분석 방법 설계, 구현</p>
-                            </div>
-                        </div>
-                    </li>
-                    <li class="timeline-inverted">
-                        <div class="timeline-image">
-                            <h4>Be Part<br />Of My<br />Story!</h4>
-                        </div>
-                    </li>
-                </ul>
             </div>
         </section>
 
